flex-projeto/style.css
*{
  margin:0;
  padding:0;
  font-family: 'Open Sans', sans-serif;
}

ul{
  list-style: none;
  margin: 0;
  padding: 0;
}

ul li a{
  text-decoration: none;
}

.flex-container{
  display: flex;
  max-width: 992px;
  margin: auto;
  width: 100%;
}

header{
  background-color: #122A57;
  height: 100px;
  display: flex;
  align-items: center;
  color: #fff;
}

header .list-items{
  display: flex;
  max-width: 260px;
  width: 100%;
  justify-content: space-between;
}

.list-items li a{
  color: #fff;
 
}

header .menu{
  justify-content: space-between;
}

.introduction{
  height: 100vh;
  align-items: center;
  justify-content: space-between;
}

.introduction .introduction_text{
  min-height: 200px;
}
.introduction .introduction_text h1{
  color:#122A57;
  font-size: 48px;
  margin-bottom: 10px;
}

.introduction_text a{
  background-color: #122A57;
  color: #fff;
  text-align: center;
  border-radius: 30px;
  width: 220px;
  height: 50px;
  line-height: 50px;
  text-decoration: none;
  display: block;
  margin: 10px 0;
}

.about{
  flex-direction: row-reverse;
  align-items: center;
  justify-content: space-between;
}

.about h2{
  font-size: 32px;
  color: #122A57;
  display: flex;
  margin-bottom: 20px;
}
.about h2::before{
  content: "";
  height: 50px;
  width: 5px;
  margin-right: 5px;
  background-color: #122A57;
  position: relative;
}

.about p{
  margin-bottom: 10px;
  width: 90%;
}

